--- a/style.css
+++ b/style.css
@@ -1,4 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 *{
     margin: 0px;
-    padding: 0px;
+    padding: 0px; box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+}
+
+body{
+    width: 100%; height: 100vh;
+    display: flex; align-items: center;
+    justify-content: center;
+    background-color: #eee;
+}
+
+.wrapper{
+    width: 500px; height: 400px;
+    background-color: #fff; border-radius: 10px;
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.392);
+    padding: 10px;
+}
+
+.wrapper h1{
+    margin-bottom: 30px;
+    text-align: center;
 }
