--- a/style.css
+++ b/style.css
@@ -1,44 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-*{
+* {
     margin: 0px;
-    padding: 0px; box-sizing: border-box;
+    padding: 0px;
+    box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
 
-body{
-    width: 100%; height: 100vh;
-    display: flex; align-items: center;
+body {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
     justify-content: center;
     background-color: #eee;
 }
 
-.wrapper{
-    width: 400px; height: 320px;
-    background-color: #fff; border-radius: 10px;
+.wrapper {
+    width: 400px;
+    height: 320px;
+    background-color: #fff;
+    border-radius: 10px;
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.392);
     padding: 15px 10px;
 }
 
-.wrapper h1{
+.wrapper h1 {
     margin-bottom: 30px;
     text-align: center;
 }
 
-p{
+p {
     font-size: 17px;
     font-weight: bold;
     text-align: center;
     margin-bottom: 5px;
 }
-.dob-wrapper{
+
+.dob-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px 40px;
     padding: 10px 0px;
 }
-.dob-wrapper input{
+
+.dob-wrapper input {
     border: 2px solid black;
     text-align: center;
     border-radius: 3px;
@@ -50,21 +57,21 @@ p{
     transition: all 0.2s linear;
 }
 
-.dob-wrapper input:focus{
+.dob-wrapper input:focus {
     border: 2px solid blue;
 }
 
-.btn{
+.btn {
     text-align: center;
     margin-top: 15px;
 }
 
-.btn input{
+.btn input {
     border: none;
     outline: none;
     background-color: blue;
     color: white;
-    padding:10px;
+    padding: 10px;
     font-size: 17px;
     border-radius: 5px;
     font-weight: bold;
@@ -72,29 +79,32 @@ p{
     cursor: pointer;
     transition: all 0.2s linear;
 }
-.btn input:hover{
+
+.btn input:hover {
     transform: translateY(-1px);
 }
 
-#age{
+#age {
     margin-top: 30px;
 }
 
 /* Responsive */
 
 @media screen and (max-width: 427px) {
-    body{
+    body {
         padding: 0px 10px;
     }
-    .wrapper h1{
+
+    .wrapper h1 {
         font-size: 22px;
     }
 
-    .wrapper{
+    .wrapper {
         max-width: 400px;
         padding: 10px 10px;
     }
-    .dob-wrapper{
+
+    .dob-wrapper {
         gap: 10px 30px;
     }
 }
